--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "react-scripts build"
   },
   "keywords": [],
-  "author": "",
+  "author": "Will Bridges",
   "license": "ISC",
   "description": "a site where users can upload movie reviews",
   "dependencies": {
