--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "^5.0.1",
-    "@remix-run/dev": "2.16.0"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
